--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Feel It</title>
   </head>
   <body>
+    <div id="modals"></div>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
